[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sound/music02.wav" type="AudioStream" id=1]
[ext_resource path="res://Sound/music03.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/music01.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/BGMUSIC.gd" type="Script" id=4]

[node name="BGMUSIC" type="Node"]
script = ExtResource( 4 )

[node name="Music01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Music02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="Music03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
[connection signal="finished" from="Music01" to="." method="_on_Music01_finished"]
[connection signal="finished" from="Music02" to="." method="_on_Music02_finished"]
[connection signal="finished" from="Music03" to="." method="_on_Music03_finished"]
